# thesis_visionfordrone

./: CMakeLists.txt  README.md
autopilot/include/autopilot/: Autopilot.h  AutopilotGL.h
autopilot/src/autopilot/: AutopilotGL.cpp
libs/autopilot/: CMakeLists.txt
libs/autopilot/include/autopilot/: AutopilotGL.h  PID.h  RateCounter.h
libs/autopilot/src/autopilot/: AutopilotGL.cpp  PID.cpp  RateCounter.cpp
libs/realsense/: CMakeLists.txt
libs/realsense/include/realsense/: RealSenseCamera.h  pcl_conversions.h
libs/realsense/src/realsense/: RealSenseCamera.cpp  pcl_conversions.cpp
libs/vision/: CMakeLists.txt
libs/vision/include/vision/: AngleDetect.h  FarnebackMethod.h  FeatureMatching.h  KCFTracker.h  LucasMethod.h  TemplateMatchThread.h  TemplateMatching.h
libs/vision/src/vision/: AngleDetect.cpp  FarnebackMethod.cpp  FeatureMatching.cpp  KCFTracker.cpp  LucasMethod.cpp  TemplateMatchThread.cpp  TemplateMatching.cpp
scripts/: CMakeLists.txt  mainFeatureDescript.cpp  mainPose.cpp  mainTemplMatch.cpp  mainTemplMatchThread.cpp  mainTera.cpp
scripts/autopilot_vision/: CMakeLists.txt  autopilot_FM.cpp  autopilot_KCF.cpp  autopilot_LK.cpp  autopilot_TM.cpp  autopilot_TMKCF.cpp
scripts/vision_examples/: CMakeLists.txt  mainCam.cpp  mainCirculantMatrix.cpp  mainExampleFeatures.cpp  mainFanerback.cpp  mainFeature.cpp  mainKCF.cpp  mainLucas.cpp  mainTemplMatch.cpp  mainTemplMatchThread.cpp
scripts/vision_examples/Not used yet/: KCFImproved.cpp  mainApproachPCL.cpp  mainFanerback.cpp  mainLucas.cpp
vision/include/vision/: AngleDetect.h  FarnebackMethod.h  FeatureMatching.h  KCFTracker.h  LucasMethod.h  TemplateMatchThread.h  TemplateMatching.h
vision/src/vision/: AngleDetect.cpp  FarnebackMethod.cpp  FeatureMatching.cpp  KCFTracker.cpp  LucasMethod.cpp  TemplateMatchThread.cpp  TemplateMatching.cpp
